Adding V13 and improving few tests (#30)
* Adding V13 and improving few tests
* Minor naming change
* Updating table